refactor(Crews) : 인덱스를 통해 접근하는 것이 아닌 getFirst() 사용